# ai_doc_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: embedding_store.py  llm_interface.py
documents/: extra_voorbeeld.txt
scripts/: ask_docs.py  build_index.py  gradio_app.py  summarize_docs.py  test_loader.py
