[project]
name = "ai-doc-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "simeonrutges",email = "s.rutges@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.26.3,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gradio (>=5.39.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

